--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
   # Nginx Service
   webserver:
     image: nginx:alpine
-    container_name: webserver
+    container_name: nginxserver
     restart: unless-stopped
     tty: true
     ports:
