--- a/.env
+++ b/.env
@@ -6,11 +6,11 @@ APP_LOG_LEVEL=debug
 APP_URL=http://localhost/vistorpass/public/
 
 DB_CONNECTION=mysql
-DB_HOST=db
+DB_HOST=bdrjjj9145pqfkg4mkwk-mysql.services.clever-cloud.com
 DB_PORT=3306
-DB_DATABASE=visitorpass
-DB_USERNAME=root
-DB_PASSWORD=123456789
+DB_DATABASE=bdrjjj9145pqfkg4mkwk
+DB_USERNAME=uwg4gtaq0fcidjxm
+DB_PASSWORD=wEwr25GYTCEaYQfSRemS
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
