--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,9 +21,7 @@ services:
     entrypoint: |
       bash -c "
         chown -R www-data:www-data /var/www/html/storage /var/www/html/bootstrap/cache && \
-        chmod -R 775 /var/www/html/storage /var/www/html/bootstrap/cache && \
-        php-fpm
-      "
+        chmod -R 775 /var/www/html/storage /var/www/html/bootstrap/cache      "
 
   # Nginx Service
   webserver:
