--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - ./php/laravel.ini:/usr/local/etc/php/conf.d/laravel.ini
     networks:
       - app-network
-      
+
   # Nginx Service
   webserver:
     image: nginx:alpine
@@ -26,7 +26,7 @@ services:
     restart: unless-stopped
     tty: true
     ports:
-      - '8080:80'
+      - '8080:80' # Map host port 81 to container port 80
     volumes:
       - ./:/var/www/html/
       - ./nginx/conf.d/:/etc/nginx/conf.d/
@@ -40,7 +40,7 @@ services:
     restart: unless-stopped
     tty: true
     ports:
-      - '3306:3306'
+      - '3306:3306' # Fix MySQL port mapping to the default port
     environment:
       MYSQL_DATABASE: visitorpass
       MYSQL_ROOT_PASSWORD: 123456789
