--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,26 @@ services:
       - ./php/laravel.ini:/usr/local/etc/php/conf.d/laravel.ini
     networks:
       - app-network
-
+  
+   # MySQL Service
+   db:
+     image: mysql:5.7.32
+     container_name: db
+     restart: unless-stopped
+     tty: true
+     ports:
+       - '3306:3306' # Fix MySQL port mapping to the default port
+     environment:
+       MYSQL_DATABASE: visitorpass
+       MYSQL_ROOT_PASSWORD: 123456789
+       SERVICE_TAGS: dev
+       SERVICE_NAME: mysql-server
+     volumes:
+       - dbdata:/var/lib/mysql/
+       - ./mysql/my.cnf:/etc/mysql/my.cnf
+     networks:
+       - app-networ
+       
   # Nginx Service
   webserver:
     image: nginx:alpine
