--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME='Onishell Tiburcio'
+APP_NAME='sisvisitas'
 APP_ENV=local
 APP_KEY=base64:PP58m48t5l+BksSvVS0sf3BwRvBcgZuRuCALkM3drSg=
 APP_DEBUG=true
@@ -6,9 +6,9 @@ APP_LOG_LEVEL=debug
 APP_URL=http://localhost/vistorpass/public/
 
 DB_CONNECTION=mysql
-DB_HOST=bdrjjj9145pqfkg4mkwk-mysql.services.clever-cloud.com
+DB_HOST=b54oxmitycjuqfw7rpbk-mysql.services.clever-cloud.com
 DB_PORT=3306
-DB_DATABASE=bdrjjj9145pqfkg4mkwk
+DB_DATABASE=b54oxmitycjuqfw7rpbk
 DB_USERNAME=uwg4gtaq0fcidjxm
 DB_PASSWORD=wEwr25GYTCEaYQfSRemS
 
