--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -1,20 +1,32 @@
+
 server {
     listen 80;
-    index index.php index.html;
+    index index.php index.html index.htm;
+    error_log /var/log/nginx/error.log;
+    access_log /var/log/nginx/access.log;
+
+    # Root should point to /public folder
     root /var/www/html/public;
 
+    # Handle PHP requests
+    location ~ \.php$ {
+        try_files $uri =404;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass app:9000; # 'app' is the PHP service, and port 9000 is the default for PHP-FPM
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
+
+    # Handle other requests and route them to index.php (for Laravel's route handling)
     location / {
         try_files $uri $uri/ /index.php?$query_string;
+        gzip_static on;  # Serve pre-compressed files if they exist (useful for static files)
     }
 
-    location ~ \.php$ {
-        include fastcgi_params;
-        fastcgi_pass app:9000;
-        fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-    }
-
-    location ~ /\.ht {
+    # Deny access to hidden files (e.g., .env, .git, etc.)
+    location ~ /\. {
         deny all;
     }
 }
