--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,25 +20,6 @@ services:
     networks:
       - app-network
 
-  # MySQL Service
-  db:
-    image: mysql:5.7.32
-    container_name: db
-    restart: unless-stopped
-    tty: true
-    ports:
-      - '3306:3306'
-    environment:
-      MYSQL_DATABASE: visitorpass
-      MYSQL_ROOT_PASSWORD: 123456789
-      SERVICE_TAGS: dev
-      SERVICE_NAME: mysql-server
-    volumes:
-      - dbdata:/var/lib/mysql/
-      - ./mysql/my.cnf:/etc/mysql/my.cnf
-    networks:
-      - app-network
-
   # Nginx Service
   webserver:
     image: nginx:alpine
@@ -49,7 +30,7 @@ services:
       - '8080:80'  # Host port 8080 -> Container port 80
     volumes:
       - ./:/var/www/html/
-      - ./nginx/conf.d/:/etc/nginx/conf.d/
+      #- ./nginx/conf.d/:/etc/nginx/conf.d/
     networks:
       - app-network
 
