--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -1,25 +1,48 @@
-
 server {
     listen 80;
-    index;
-    error_log /var/log/nginx/error.log;
-    access_log /var/log/nginx/access.log;
+    index index.php index.html;
+    root /var/www/public;
 
-    # Root should point to /public folder
-    root /var/www/html/public;
+    # serve static files directly
+	location ~* \.(jpg|jpeg|gif|css|png|js|ico|html)$ {
+		access_log off;
+		expires max;
+		log_not_found off;
+	}
 
-    # Handle PHP requests
-    location ~ \.php$ {
-        try_files $uri =404;
+	# removes trailing slashes (prevents SEO duplicate content issues)
+	if (!-d $request_filename)
+	{
+		rewrite ^/(.+)/$ /$1 permanent;
+	}
+
+	# enforce NO www
+	if ($host ~* ^www\.(.*))
+	{
+		set $host_without_www $1;
+		rewrite ^/(.*)$ $scheme://$host_without_www/$1 permanent;
+	}
+
+	# unless the request is for a valid file (image, js, css, etc.), send to bootstrap
+	if (!-e $request_filename)
+	{
+		rewrite ^/(.*)$ /index.php?/$1 last;
+		break;
+	}
+
+	location / {
+		try_files $uri $uri/ /index.php?$query_string;
+	}
+
+	location ~* \.php$ {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass app:9000; # 'app' is the PHP service, and port 9000 is the default for PHP-FPM
-        include fastcgi_params;
+        fastcgi_pass app:9000;
+        fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
+        include fastcgi_params;
     }
 
-    # Deny access to hidden files (e.g., .env, .git, etc.)
-    location ~ /\. {
-        deny all;
-    }
+    location ~ /\.ht {
+		deny all;
+	}
 }
